--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
                 <div>
                   <h5 class="js_bookmark_film_title"></h5>
                   <p class="js_film_bookmark_rating"></p>
-                  <p class=".js_film_year"></p>
+                  <p class="js_film_year"></p>
                 </div>
                 <div>
-                  <i class='bx bxs-tag-x'></i>
+                  <i class='delete_bookmark bx bxs-tag-x'></i>
                 </div>
               </li>
             </template>
